# code_rag_ollama

./: .gitignore  README.md  app.py  pyproject.toml
